[tool.poetry]
name = "address-versel"
version = "0.1.0"
description = ""
authors = ["YiTing Wu <yitingwu.1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
